@startuml
!pragma layout smetana
'https://plantuml.com/class-diagram

class Main{
- static Nav nav
+ static void main()

}

class Nav {
+ File FileIO;
+ textUI;
+ ArrayList series
+ ArrayList movies
+ void logout()
- String signup()


}

Content --> Nav
Main <-- Nav



class textFileIO{
+ ArrayList <String> readtextSeries()
+ ArrayList <String> readtextMovie()
+ ArrayList <String> readtextUser()
+ String fileException()
}

class textUI{
- Scanne scan
+ String getUserInput(String msg)
+ int getUserInput(int msg)
+ ArrayList<String> getUserInput(String msg, int iterations)

}
class user{
- int age
- String username
- String password
- ArrayList watchedMovies
- ArrayList savedMovies
- static int ID
..
+ void login()
+ watchedMovies()
+ savedMovies()
+ void setwatchedMovies(ArrayList watchedMovies)
+ void setsavedMovies(ArrayList SavedMovies)
..
+ user(int age String username String password)


}




Nav <-- user
Nav <-- textFileIO
Nav <-- textUI

Content <--- Movie
Content <-down- Serie

class Movie{
+ int year
+ int year()
+ play()
}

class Serie{
- int startDate
- int endDate
+ ArrayList Season[][]
+ String getYear(int startDate, int endDate)
+ play(int s, int e)
}


object textUser{
ID
}



object textMovie{
Name
Year
Category
Rating
}

object textSeries{
Name
startDate
endDate
Category
Rating
}



abstract Content{
- Static int ID
+ String title
+ ArrayList category
+ Float rating
+ String getTitle()
+ ArrayList getCategory()
+ float getRating()
}


textFileIO <-- textMovie
textFileIO <-- textUser
textFileIO <-- textSeries

@enduml